{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 606,
  "lineage": "af4886ca-b1ee-006f-fafb-83c7a9247c73",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pgsecgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:security-group/sg-092c4adc274777d77",
            "description": "Allow inbound traffic for PG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092c4adc274777d77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PG connection",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pgsecgrp",
            "name_prefix": "",
            "owner_id": "553239741950",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/e00f01b3f13677c2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/e00f01b3f13677c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:loadbalancer/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/ab8ed9d07366f82e",
            "certificate_arn": "arn:aws:acm:us-east-1:553239741950:certificate/87be9d27-ad1f-47f1-ad2d-aabbe95d4e6a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:targetgroup/api-1-staging/765edde4baf353b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/ab8ed9d07366f82e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:loadbalancer/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_security_group.alb_sg",
            "module.server-api-1.aws_alb_target_group.this",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:loadbalancer/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4",
            "arn_suffix": "app/aws-monorepo-poc-alb-staging/16b68c918c6620b4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "aws-monorepo-poc-alb-staging-1248607534.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:553239741950:loadbalancer/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-monorepo-poc-alb-staging",
            "security_groups": [
              "sg-02afb050864bb6352"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a55fc43058b3bd1e"
              },
              {
                "subnet_id": "subnet-0ba34adef8e382a0b"
              }
            ],
            "subnets": [
              "subnet-0a55fc43058b3bd1e",
              "subnet-0ba34adef8e382a0b"
            ],
            "vpc_id": "vpc-0f7b75b26eb7215b4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:security-group/sg-02afb050864bb6352",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02afb050864bb6352",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "aws-monorepo-poc-sg-alb-staging",
            "name_prefix": "",
            "owner_id": "553239741950",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.server-api-1",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:targetgroup/api-1-staging/765edde4baf353b5",
            "arn_suffix": "targetgroup/api-1-staging/765edde4baf353b5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553239741950:targetgroup/api-1-staging/765edde4baf353b5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "api-1-staging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.server-api-1",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:targetgroup/api-1-staging/765edde4baf353b5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener-rule/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/ab8ed9d07366f82e/022c9cdb6791854f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api-1/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener-rule/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/ab8ed9d07366f82e/022c9cdb6791854f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/ab8ed9d07366f82e",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb_listener.https",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_security_group.alb_sg",
            "module.server-api-1.aws_alb_target_group.this",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.server-api-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:security-group/sg-0e03ee8e5846abdbd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e03ee8e5846abdbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound",
                "from_port": 3006,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3006
              }
            ],
            "name": "aws-monorepo-poc-ecs-sg-api-1-staging",
            "name_prefix": "",
            "owner_id": "553239741950",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.server-api-2",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:targetgroup/api-2-staging/44320851fd254459",
            "arn_suffix": "targetgroup/api-2-staging/44320851fd254459",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553239741950:targetgroup/api-2-staging/44320851fd254459",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "api-2-staging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.server-api-2",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:targetgroup/api-2-staging/44320851fd254459",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener-rule/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/ab8ed9d07366f82e/ba9bbf0e4071a485",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api-2/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener-rule/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/ab8ed9d07366f82e/ba9bbf0e4071a485",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:553239741950:listener/app/aws-monorepo-poc-alb-staging/16b68c918c6620b4/ab8ed9d07366f82e",
            "priority": 200,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb_listener.https",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_security_group.alb_sg",
            "module.server-api-1.aws_alb_target_group.this",
            "module.server-api-2.aws_alb_target_group.this",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.server-api-2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:security-group/sg-07a324d2d255e85f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a324d2d255e85f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound",
                "from_port": 3006,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3006
              }
            ],
            "name": "aws-monorepo-poc-ecs-sg-api-2-staging",
            "name_prefix": "",
            "owner_id": "553239741950",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09930b133e63a0d32",
            "association_id": "eipassoc-01da2989e856bf8e0",
            "domain": "vpc",
            "id": "eipalloc-09930b133e63a0d32",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0acf8b0659d49ad78",
            "private_dns": "ip-10-0-0-49.ec2.internal",
            "private_ip": "10.0.0.49",
            "public_dns": "ec2-52-1-32-217.compute-1.amazonaws.com",
            "public_ip": "52.1.32.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:internet-gateway/igw-0d7a5165cf2a018cb",
            "id": "igw-0d7a5165cf2a018cb",
            "owner_id": "553239741950",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09930b133e63a0d32",
            "connectivity_type": "public",
            "id": "nat-002f930eecd81f505",
            "network_interface_id": "eni-0acf8b0659d49ad78",
            "private_ip": "10.0.0.49",
            "public_ip": "52.1.32.217",
            "subnet_id": "subnet-0a55fc43058b3bd1e",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01647ff4d47c9e16b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-002f930eecd81f505",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01647ff4d47c9e16b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:route-table/rtb-01647ff4d47c9e16b",
            "id": "rtb-01647ff4d47c9e16b",
            "owner_id": "553239741950",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-002f930eecd81f505",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:route-table/rtb-0416286028ff0abb2",
            "id": "rtb-0416286028ff0abb2",
            "owner_id": "553239741950",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7a5165cf2a018cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb1750e0b3cb089a",
            "route_table_id": "rtb-01647ff4d47c9e16b",
            "subnet_id": "subnet-092149df07c607d73"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2983b04ad782aaf",
            "route_table_id": "rtb-0416286028ff0abb2",
            "subnet_id": "subnet-0a55fc43058b3bd1e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074bcdfb758e71f83",
            "route_table_id": "rtb-0416286028ff0abb2",
            "subnet_id": "subnet-0ba34adef8e382a0b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:subnet/subnet-092149df07c607d73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092149df07c607d73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553239741950",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:subnet/subnet-0a55fc43058b3bd1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a55fc43058b3bd1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553239741950",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:subnet/subnet-0ba34adef8e382a0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba34adef8e382a0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553239741950",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "vpc_id": "vpc-0f7b75b26eb7215b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553239741950:vpc/vpc-0f7b75b26eb7215b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039e2b47f8b135bd1",
            "default_route_table_id": "rtb-0ec47aa2326e926f8",
            "default_security_group_id": "sg-03ae0b0df6bc8e02b",
            "dhcp_options_id": "dopt-0e7206ec725e363a7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f7b75b26eb7215b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec47aa2326e926f8",
            "owner_id": "553239741950",
            "tags": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            },
            "tags_all": {
              "Environment": "staging",
              "Project": "aws-monorepo-poc"
            }
          }
        }
      ]
    }
  ]
}